Upgrade Bach and JavaFX to 18.0.1