@@ -1,16 +1,28 @@
 import com.github.sormuras.bach.Bach;
-import com.github.sormuras.bach.external.JavaFX;
+import com.github.sormuras.bach.ToolCall;
 
 class build {
   public static void main(String... args) {
-    try (var bach = new Bach(args)) {
-      var grabber = bach.grabber(JavaFX.version("18-ea+6"));
-      grabber.grabExternalModules("javafx.base", "javafx.controls");
-      grabber.grabMissingExternalModules();
+    System.out.println(">>");
 
-      var builder = bach.builder().conventional("com.github.sormuras.bach.javafx");
-      builder.compile(javac -> javac.with("--module-version", "1"));
-      builder.link(link -> link.with("--launcher", "bach-javafx=com.github.sormuras.bach.javafx"));
-    }
+    var bach = Bach.ofSystem(args);
+    bach.run("com.github.sormuras.bach/build");
+
+    linkCustomRuntimeImage(bach);
+
+    System.out.println("<<");
+  }
+
+  static void linkCustomRuntimeImage(Bach bach) {
+    var main = bach.project().spaces().main();
+    var test = bach.project().spaces().test();
+    var paths = bach.configuration().paths();
+    var image = paths.out(main.name(), "image");
+    bach.run("tree", "--mode", "CLEAN", image);
+    bach.run(
+        ToolCall.of("jlink")
+            .with("--output", image)
+            .with("--add-modules", main.modules().names(","))
+            .with("--module-path", test.toModulePath(paths).orElseThrow()));
   }
 }
